Adjust layout for main container to avoid shifts
Add a scrollbar gutter and set the main element to grow inside the flex
container. This helps to prevent layout shifts and avoid resizing loops
caused by the suddent appearance of a scrollbar.

--- a/services/ui/src/styles/_global.scss
+++ b/services/ui/src/styles/_global.scss
@@ -23,5 +23,8 @@ svg {
 }
 
 main {
+  flex: 1 1 auto;
+
   overflow-y: auto;
+  scrollbar-gutter: stable;
 }
